--- a/myfilm.html
+++ b/myfilm.html
@@ -105,19 +105,21 @@
             margin-bottom: 3rem;
         }
 
-        /* Movie Card Styling */
+        /* ===== GRID MOVIE LAYOUT ===== */
         .movie-card {
-            display: flex;
-            gap: 2rem;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas:
+                "info info"
+                "poster trailer";
+            gap: 1.5rem;
             background: #fff;
-            padding: 1rem;
+            padding: 1.5rem;
             border: 2px solid var(--border-line);
             border-radius: 18px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             text-decoration: none;
             color: inherit;
-            flex-wrap: wrap;
-            align-items: flex-start;
         }
 
         .movie-card:hover {
@@ -125,25 +127,14 @@
             box-shadow: 0 15px 30px rgba(0,0,0,0.1);
         }
 
-        .movie-poster {
-            width: 100%;
-            max-width: 250px;
-            aspect-ratio: 5 / 7;
-            object-fit: cover;
-            border-radius: 6px;
-            flex-shrink: 0;
-        }
-
         .movie-info {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
+            grid-area: info;
         }
 
         .movie-info h3 {
             margin-bottom: 0.5rem;
             font-family: 'Playfair Display', serif;
-            font-size: 1.6rem;
+            font-size: 1.8rem;
             color: var(--primary-red);
         }
 
@@ -154,14 +145,22 @@
             line-height: 1.5;
         }
 
-        /* Responsive embedded YouTube trailers */
-        .trailer {
+        .movie-poster {
+            grid-area: poster;
             width: 100%;
-            margin-top: 1rem;
+            max-width: 250px;
+            aspect-ratio: 5 / 7;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .trailer {
+            grid-area: trailer;
+            position: relative;
+            width: 100%;
+            padding-top: 56.25%;
             border-radius: 8px;
             overflow: hidden;
-            position: relative;
-            padding-top: 56.25%; /* 16:9 ratio */
         }
 
         .trailer iframe {
@@ -201,19 +200,19 @@
             font-size: 0.9rem;
         }
 
+        /* ===== MOBILE ===== */
         @media(max-width: 900px) {
             .movie-card {
-                flex-direction: column;
-                align-items: center;
+                grid-template-columns: 1fr;
+                grid-template-areas:
+                    "info"
+                    "poster"
+                    "trailer";
                 text-align: center;
             }
 
-            .movie-info {
-                margin-top: 1rem;
-            }
-
-            .trailer {
-                padding-top: 50%; /* taller on mobile */
+            .movie-poster {
+                margin: 0 auto;
             }
 
             .section {
@@ -224,101 +223,108 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="movies.html">Movies</a>
-            <a href="tvshows.html">TV Shows</a>
-        </nav>
-    </header>
 
-    <section class="section">
-        <div class="section-content">
-            <h2>My Personal Movie Favorites</h2>
-            <p class="subtitle">Some of my all-time favorite films</p>
+<header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="movies.html">Movies</a>
+        <a href="tvshows.html">TV Shows</a>
+    </nav>
+</header>
 
-            <div class="movies-grid">
+<section class="section">
+    <div class="section-content">
+        <h2>My Personal Movie Favorites</h2>
+        <p class="subtitle">Some of my all-time favorite films</p>
 
-                <a href="https://en.wikipedia.org/wiki/Interstellar_%28film%29" class="movie-card">
-                    <img src="images/films/interstellar.jpg" alt="Interstellar Poster" class="movie-poster">
-                    <div class="movie-info">
-                        <h3>Interstellar</h3>
-                        <p>Genre: Sci-Fi / Adventure</p>
-                        <p>Year: 2014</p>
-                        <p>An epic exploration of space and time, with love and survival at its core.</p>
-                        <div class="trailer">
-                            <iframe src="https://www.youtube.com/embed/zSWdZVtXT7E" title="Interstellar Trailer" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </a>
+        <div class="movies-grid">
 
-                <a href="https://en.wikipedia.org/wiki/The_Karate_Kid_(2010_film)" class="movie-card">
-                    <img src="images/films/thekaratekid.jpg" alt="The Karate Kid Poster" class="movie-poster">
-                    <div class="movie-info">
-                        <h3>The Karate Kid</h3>
-                        <p>Genre: Action / Drama</p>
-                        <p>Year: 2010</p>
-                        <p>Jaden Smith learns martial arts to overcome challenges and find inner strength.</p>
-                        <div class="trailer">
-                            <iframe src="https://www.youtube.com/embed/XY8amUImEu0" title="The Karate Kid Trailer" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </a>
+            <!-- Interstellar -->
+            <a href="https://en.wikipedia.org/wiki/Interstellar_%28film%29" class="movie-card">
+                <div class="movie-info">
+                    <h3>Interstellar</h3>
+                    <p>Genre: Sci-Fi / Adventure</p>
+                    <p>Year: 2014</p>
+                    <p>An epic exploration of space and time, with love and survival at its core.</p>
+                </div>
+                <img src="images/films/interstellar.jpg" alt="Interstellar Poster" class="movie-poster">
+                <div class="trailer">
+                    <iframe src="https://www.youtube.com/embed/zSWdZVtXT7E" allowfullscreen></iframe>
+                </div>
+            </a>
 
-                <a href="https://en.wikipedia.org/wiki/Coraline_(film)" class="movie-card">
-                    <img src="images/films/coraline.jpg" alt="Coraline Poster" class="movie-poster">
-                    <div class="movie-info">
-                        <h3>Coraline</h3>
-                        <p>Genre: Fantasy / Animation</p>
-                        <p>Year: 2009</p>
-                        <p>A young girl discovers a mysterious parallel world with dark secrets.</p>
-                        <div class="trailer">
-                            <iframe src="https://www.youtube.com/embed/m9bOpeuvNwY" title="Coraline Trailer" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </a>
+            <!-- The Karate Kid -->
+            <a href="https://en.wikipedia.org/wiki/The_Karate_Kid_(2010_film)" class="movie-card">
+                <div class="movie-info">
+                    <h3>The Karate Kid</h3>
+                    <p>Genre: Action / Drama</p>
+                    <p>Year: 2010</p>
+                    <p>Jaden Smith learns martial arts to overcome challenges and find inner strength.</p>
+                </div>
+                <img src="images/films/thekaratekid.jpg" alt="The Karate Kid Poster" class="movie-poster">
+                <div class="trailer">
+                    <iframe src="https://www.youtube.com/embed/XY8amUImEu0" allowfullscreen></iframe>
+                </div>
+            </a>
 
-                <a href="https://en.wikipedia.org/wiki/Now_You_See_Me_(film)" class="movie-card">
-                    <img src="images/films/nowyouseeme.jpg" alt="Now You See Me Poster" class="movie-poster">
-                    <div class="movie-info">
-                        <h3>Now You See Me</h3>
-                        <p>Genre: Mystery / Thriller</p>
-                        <p>Year: 2013</p>
-                        <p>A team of magicians pulls off daring heists while staying ahead of the law.</p>
-                        <div class="trailer">
-                            <iframe src="https://www.youtube.com/embed/C2NWGAqZhF4" title="Now You See Me Trailer" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </a>
+            <!-- Coraline -->
+            <a href="https://en.wikipedia.org/wiki/Coraline_(film)" class="movie-card">
+                <div class="movie-info">
+                    <h3>Coraline</h3>
+                    <p>Genre: Fantasy / Animation</p>
+                    <p>Year: 2009</p>
+                    <p>A young girl discovers a mysterious parallel world with dark secrets.</p>
+                </div>
+                <img src="images/films/coraline.jpg" alt="Coraline Poster" class="movie-poster">
+                <div class="trailer">
+                    <iframe src="https://www.youtube.com/embed/m9bOpeuvNwY" allowfullscreen></iframe>
+                </div>
+            </a>
 
-                <a href="https://en.wikipedia.org/wiki/Oppenheimer_(film)" class="movie-card">
-                    <img src="images/films/oppeneimer.jpg" alt="Oppenheimer Poster" class="movie-poster">
-                    <div class="movie-info">
-                        <h3>Oppenheimer</h3>
-                        <p>Genre: Biography / Drama</p>
-                        <p>Year: 2023</p>
-                        <p>The story of J. Robert Oppenheimer, the “father of the atomic bomb,” and the moral dilemmas he faced.</p>
-                        <div class="trailer">
-                            <iframe src="https://www.youtube.com/embed/uYPbbksJxIg" title="Oppenheimer Trailer" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </a>
+            <!-- Now You See Me -->
+            <a href="https://en.wikipedia.org/wiki/Now_You_See_Me_(film)" class="movie-card">
+                <div class="movie-info">
+                    <h3>Now You See Me</h3>
+                    <p>Genre: Mystery / Thriller</p>
+                    <p>Year: 2013</p>
+                    <p>A team of magicians pulls off daring heists while staying ahead of the law.</p>
+                </div>
+                <img src="images/films/nowyouseeme.jpg" alt="Now You See Me Poster" class="movie-poster">
+                <div class="trailer">
+                    <iframe src="https://www.youtube.com/embed/C2NWGAqZhF4" allowfullscreen></iframe>
+                </div>
+            </a>
 
-            </div>
+            <!-- Oppenheimer -->
+            <a href="https://en.wikipedia.org/wiki/Oppenheimer_(film)" class="movie-card">
+                <div class="movie-info">
+                    <h3>Oppenheimer</h3>
+                    <p>Genre: Biography / Drama</p>
+                    <p>Year: 2023</p>
+                    <p>The story of J. Robert Oppenheimer and the moral dilemmas he faced while developing the atomic bomb.</p>
+                </div>
+                <img src="images/films/oppeneimer.jpg" alt="Oppenheimer Poster" class="movie-poster">
+                <div class="trailer">
+                    <iframe src="https://www.youtube.com/embed/uYPbbksJxIg" allowfullscreen></iframe>
+                </div>
+            </a>
 
-            <div class="divider"></div>
         </div>
-    </section>
 
-    <footer>
-        <div class="social-links">
-            <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
-        </div>
-        <p>&copy; Cyril Libuton</p>
-    </footer>
+        <div class="divider"></div>
+    </div>
+</section>
+
+<footer>
+    <div class="social-links">
+        <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+    </div>
+    <p>&copy; Cyril Libuton</p>
+</footer>
+
 </body>
 </html>
