--- a/mybeats.html
+++ b/mybeats.html
@@ -199,42 +199,42 @@
 
             <div class="beats-grid">
                 <a href="https://open.spotify.com/album/79dL7FLiJFOO0EoehUHQBv" class="beat-card">
-                    <img src="images/currents.png" class="album-image">
+                    <img src="images/beats/currents.png" class="album-image">
                     <div class="artist-name">Tame Impala</div>
                     <div class="album-name">Currents</div>
                     <div class="review-snippet">It feels like being swept into a colorful wave of emotion that’s overwhelming yet strangely empowering.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/42cH7mrkfljkqkxA2Ip9Xq" class="beat-card">
-                    <img src="images/bethecowboy.jpg" class="album-image">
+                    <img src="images/beats/bethecowboy.jpg" class="album-image">
                     <div class="artist-name">Mitski</div>
                     <div class="album-name">Be The Cowboy</div>
                     <div class="review-snippet">Composed and dramatic, but you can feel the vulnerability underneath.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/78bpIziExqiI9qztvNFlQu" class="beat-card">
-                    <img src="images/am.png" class="album-image">
+                    <img src="images/beats/am.png" class="album-image">
                     <div class="artist-name">Arctic Monkeys</div>
                     <div class="album-name">AM</div>
                     <div class="review-snippet">Simple and bold, with a cool, late-night confidence.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/31qVWUdRrlb8thMvts0yYL" class="beat-card">
-                    <img src="images/theslowrush.png" class="album-image">
+                    <img src="images/beats/theslowrush.png" class="album-image">
                     <div class="artist-name">Tame Impala</div>
                     <div class="album-name">The Slow Rush</div>
                     <div class="review-snippet">It captures the quiet, beautiful loneliness of time slowly slipping away.</div>
                 </a>
 
                 <a href="https://open.spotify.com/album/6lbrHERXve89hrxuCpsJOg" class="beat-card">
-                    <img src="images/portals.png" class="album-image">
+                    <img src="images/beats/portals.png" class="album-image">
                     <div class="artist-name">Melanie Martinez</div>
                     <div class="album-name">Portals</div>
                     <div class="review-snippet">A strange, magical rebirth that feels freeing and chaotic.</div>
                 </a>
 
                 <a href="https://open.spotify.com/playlist/6J9e5CSe67b2uuhlmY539p" class="beat-card">
-                    <img src="images/crybaby.png" class="album-image">
+                    <img src="images/beats/crybaby.png" class="album-image">
                     <div class="artist-name">Melanie Martinez</div>
                     <div class="album-name">Cry Baby</div>
                     <div class="review-snippet">Soft and pastel on the surface, but deeply honest about pain underneath.</div>
@@ -256,4 +256,5 @@
     </footer>
 </body>
 </html>
+
 
