--- a/myfilmtv.html
+++ b/myfilmtv.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Film TV Shows</title>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
 :root {
@@ -13,44 +17,167 @@
     --primary-red: #9E4244;
     --text-dark: #2c2c2c;
     --border-line: #000;
+    --muted-text: #666;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Lato', sans-serif;
     background-color: var(--bg-cream);
     color: var(--text-dark);
     border-top: 20px solid var(--primary-red);
-    margin:0;
 }
+
+/* HEADER */
 header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: var(--bg-cream);
     padding: 1.5rem 5%;
     border-bottom: 2px solid var(--border-line);
-    text-align:center;
+    z-index: 999;
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+}
+
 nav a {
-    margin: 0 2rem;
-    text-decoration:none;
-    font-family:'Playfair Display', serif;
-    color:var(--text-dark);
+    text-decoration: none;
+    font-family: 'Playfair Display', serif;
+    font-size: 1.2rem;
+    color: var(--text-dark);
 }
-nav a:hover { color: var(--primary-red); }
+
+nav a:hover {
+    color: var(--primary-red);
+}
+
+/* MAIN SECTION */
 .section {
-    padding: 5rem 10%;
-    border-top:2px solid var(--border-line);
+    padding: 10rem 8% 5rem;
+    max-width: 1200px;
+    margin: auto;
 }
-.projects-grid {
-    display:grid;
-    gap:30px;
+
+.page-title {
+    text-align: center;
+    font-family: 'Playfair Display', serif;
+    font-size: 3rem;
+    color: var(--primary-red);
+    margin-bottom: 4rem;
 }
-.project {
-    background:white;
-    padding:25px;
-    border-left:6px solid var(--primary-red);
-    box-shadow:0 10px 20px rgba(0,0,0,0.08);
+
+/* SPLIT LAYOUT: Desc left, video right */
+.split-container {
+    display: grid;
+    grid-template-columns: 1fr 1.2fr;
+    gap: 3rem;
+    align-items: stretch; /* ensures both containers are same height */
 }
-iframe {
-    width:100%;
-    height:300px;
-    margin-top:15px;
+
+/* Description Card */
+.desc-card {
+    background: #fff;
+    border: 2px solid var(--border-line);
+    border-radius: 25px;
+    padding: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.desc-card h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.3rem;
+    margin-bottom: 1rem;
+    color: var(--primary-red);
+}
+
+.category {
+    display: inline-block;
+    padding: 0.3rem 1rem;
+    border: 1.5px solid var(--primary-red);
+    border-radius: 20px;
+    font-size: 0.85rem;
+    margin-bottom: 1.5rem;
+    color: var(--primary-red);
+}
+
+.desc-card p {
+    margin-bottom: 1.2rem;
+    line-height: 1.7;
+    color: var(--muted-text);
+    text-align: justify;
+}
+
+.desc-card .creator {
+    font-style: italic;
+    font-size: 0.95rem;
+    text-align: justify;
+}
+
+/* Trailer Container */
+.trailer-container {
+    border: 2px solid var(--border-line);
+    border-radius: 20px;
+    overflow: hidden;
+    height: 100%; /* matches description card */
+}
+
+.trailer-container iframe {
+    width: 100%;
+    height: 100%; /* fill container height */
+    display: block;
+    border: none;
+}
+
+/* FOOTER */
+footer {
+    background-color: #DCDCD5;
+    padding: 2rem 0;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.social-links a {
+    color: var(--text-dark);
+    font-size: 1.4rem;
+}
+
+.social-links a:hover {
+    color: var(--primary-red);
+}
+
+footer p {
+    font-size: 0.9rem;
+}
+
+/* MOBILE */
+@media(max-width: 900px) {
+    .split-container {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .trailer-container {
+        height: 250px;
+    }
 }
 </style>
 </head>
@@ -58,37 +185,54 @@ iframe {
 <body>
 
 <header>
-<nav>
-<a href="index.html">Home</a>
-<a href="mybeats.html">My Beats</a>
-<a href="movies.html">Movies</a>
-<a href="tvshows.html">TV Shows</a>
-</nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="movies.html">Movies</a>
+        <a href="tvshows.html">TV Shows</a>
+    </nav>
 </header>
 
 <section class="section">
-<h2>My Favorite TV Shows</h2>
 
-<div class="projects-grid">
+    <h1 class="page-title">My Film TV Shows</h1>
 
-<div class="project">
-<h3>K-Drama: Crash Landing on You</h3>
-<p><strong>Director:</strong> Lee Jeong-hyo</p>
-<p><strong>Stars:</strong> Hyun Bin, Son Ye-jin</p>
-<p>A South Korean heiress accidentally lands in North Korea and falls in love with an officer.</p>
-<iframe src="https://www.youtube.com/embed/GVQGWgeVc4k" allowfullscreen></iframe>
-</div>
+    <div class="split-container">
 
-<div class="project">
-<h3>Action: Stranger Things</h3>
-<p><strong>Creators:</strong> Duffer Brothers</p>
-<p><strong>Stars:</strong> Millie Bobby Brown, Finn Wolfhard</p>
-<p>A thrilling sci-fi series about mysterious events in a small town.</p>
-<iframe src="https://www.youtube.com/embed/b9EkMc79ZSU" allowfullscreen></iframe>
-</div>
+        <!-- Description Card -->
+        <div class="desc-card">
+            <div>
+                <h2>Modern Family</h2>
+                <div class="category">Sitcom / Comedy</div>
 
-</div>
+                <p>
+                    A lighthearted and hilarious mockumentary-style series following three related families as they navigate everyday life, parenting, and love. It’s one of my ultimate comfort series — perfect for rewatching when I need laughs and warmth.
+                </p>
+            </div>
+
+            <p class="creator">
+                Created by Christopher Lloyd & Steven Levitan
+            </p>
+        </div>
+
+        <!-- Trailer -->
+        <div class="trailer-container">
+            <iframe src="https://www.youtube.com/embed/Ub_oQ7Kz3nQ" allowfullscreen></iframe>
+        </div>
+
+    </div>
+
 </section>
+
+<footer>
+    <div class="social-links">
+        <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+    </div>
+    <p>&copy; Cyril Libuton</p>
+</footer>
 
 </body>
 </html>
