--- a/gallery.html
+++ b/gallery.html
@@ -241,29 +241,29 @@ footer {
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
-        <a href="friend1.jpeg" target="imageTab"><img src="friend1.jpeg" alt="My Bestfriend Zea"></a>
+        <a href="images/gallery/friend1.jpeg" target="imageTab"><img src="friend1.jpeg" alt="My Bestfriend Zea"></a>
         <figcaption>My Bestfriend Zea</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="friend2.jpeg" target="imageTab"><img src="friend2.jpeg" alt="My Bestfriend Trayce"></a>
+        <a href="images/gallery/friend2.jpeg" target="imageTab"><img src="friend2.jpeg" alt="My Bestfriend Trayce"></a>
         <figcaption>My Bestfriend Trayce</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="friend3.jpeg" target="imageTab"><img src="friend3.jpeg" alt="Double Date w/ Zea"></a>
+        <a href="images/gallery/friend3.jpeg" target="imageTab"><img src="friend3.jpeg" alt="Double Date w/ Zea"></a>
         <figcaption>Double Date w/ Zea</figcaption>
     </figure>
 </div>
 <div class="gallery-row">
     <figure class="figure-square">
-        <a href="friend4.jpeg" target="imageTab"><img src="friend4.jpeg" alt="Lunch w/ Zea"></a>
+        <a href="images/gallery/friend4.jpeg" target="imageTab"><img src="friend4.jpeg" alt="Lunch w/ Zea"></a>
         <figcaption>Lunch w/ Zea</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="friend5.jpeg" target="imageTab"><img src="friend5.jpeg" alt="UE friends"></a>
+        <a href="images/gallery/friend5.jpeg" target="imageTab"><img src="friend5.jpeg" alt="UE friends"></a>
         <figcaption>UE friends</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="friend6.jpeg" target="imageTab"><img src="friend6.jpeg" alt="Childhood friends"></a>
+        <a href="images/gallery/friend6.jpeg" target="imageTab"><img src="friend6.jpeg" alt="Childhood friends"></a>
         <figcaption>Childhood friends</figcaption>
     </figure>
 </div>
@@ -277,29 +277,29 @@ footer {
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
-        <a href="family1.jpeg" target="imageTab"><img src="family1.jpeg" alt="Family 1"></a>
+        <a href="images/gallery/family1.jpeg" target="imageTab"><img src="family1.jpeg" alt="Family 1"></a>
         <figcaption>Father side</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="family2.jpeg" target="imageTab"><img src="family2.jpeg" alt="Family 2"></a>
+        <a href="images/gallery/family2.jpeg" target="imageTab"><img src="family2.jpeg" alt="Family 2"></a>
         <figcaption>Me and my niece</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="family3.jpeg" target="imageTab"><img src="family3.jpeg" alt="Family 3"></a>
+        <a href="images/gallery/family3.jpeg" target="imageTab"><img src="family3.jpeg" alt="Family 3"></a>
         <figcaption>Mother side</figcaption>
     </figure>
 </div>
 <div class="gallery-row">
     <figure class="figure-square">
-        <a href="family4.jpeg" target="imageTab"><img src="family4.jpeg" alt="Family 4"></a>
+        <a href="images/gallery/family4.jpeg" target="imageTab"><img src="family4.jpeg" alt="Family 4"></a>
         <figcaption>w/ my mom</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="family5.jpeg" target="imageTab"><img src="family5.jpeg" alt="Family 5"></a>
+        <a href="images/gallery/family5.jpeg" target="imageTab"><img src="family5.jpeg" alt="Family 5"></a>
         <figcaption>Father side</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="family6.jpeg" target="imageTab"><img src="family6.jpeg" alt="Family 6"></a>
+        <a href="images/gallery/family6.jpeg" target="imageTab"><img src="family6.jpeg" alt="Family 6"></a>
         <figcaption>My mom and her lover</figcaption>
     </figure>
 </div>
@@ -313,29 +313,29 @@ footer {
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
-        <a href="hobby1.jpeg" target="imageTab"><img src="hobby1.jpeg" alt="Hobby 1"></a>
+        <a href="images/gallery/hobby1.jpeg" target="imageTab"><img src="hobby1.jpeg" alt="Hobby 1"></a>
         <figcaption>Feb 2026</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="hobby2.jpeg" target="imageTab"><img src="hobby2.jpeg" alt="Hobby 2"></a>
+        <a href="images/gallery/hobby2.jpeg" target="imageTab"><img src="hobby2.jpeg" alt="Hobby 2"></a>
         <figcaption>Feb 2025</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="hobby3.jpeg" target="imageTab"><img src="hobby3.jpeg" alt="Hobby 3"></a>
+        <a href="images/gallery/hobby3.jpeg" target="imageTab"><img src="hobby3.jpeg" alt="Hobby 3"></a>
         <figcaption>Feb 2025</figcaption>
     </figure>
 </div>
 <div class="gallery-row">
     <figure class="figure-square">
-        <a href="hobby4.jpeg" target="imageTab"><img src="hobby4.jpeg" alt="Hobby 4"></a>
+        <a href="images/gallery/hobby4.jpeg" target="imageTab"><img src="hobby4.jpeg" alt="Hobby 4"></a>
         <figcaption>Mar 2025</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="hobby5.jpeg" target="imageTab"><img src="hobby5.jpeg" alt="Hobby 5"></a>
+        <a href="images/gallery/hobby5.jpeg" target="imageTab"><img src="hobby5.jpeg" alt="Hobby 5"></a>
         <figcaption>Jun 2025</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="hobby6.jpeg" target="imageTab"><img src="hobby6.jpeg" alt="Hobby 6"></a>
+        <a href="images/gallery/hobby6.jpeg" target="imageTab"><img src="hobby6.jpeg" alt="Hobby 6"></a>
         <figcaption>Jul 2025</figcaption>
     </figure>
 </div>
@@ -349,29 +349,29 @@ footer {
 </div>
 <div class="gallery-row">
     <figure class="figure-rect">
-        <a href="lover1.jpeg" target="imageTab"><img src="lover1.jpeg" alt="Lover 1"></a>
+        <a href="images/gallery/lover1.jpeg" target="imageTab"><img src="lover1.jpeg" alt="Lover 1"></a>
         <figcaption>antipolo date</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="lover2.jpeg" target="imageTab"><img src="lover2.jpeg" alt="Lover 2"></a>
+        <a href="images/gallery/lover2.jpeg" target="imageTab"><img src="lover2.jpeg" alt="Lover 2"></a>
         <figcaption>photoboot date</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="lover3.jpeg" target="imageTab"><img src="lover3.jpeg" alt="Lover 3"></a>
+        <a href="images/gallery/lover3.jpeg" target="imageTab"><img src="lover3.jpeg" alt="Lover 3"></a>
         <figcaption>antipolo date</figcaption>
     </figure>
 </div>
 <div class="gallery-row">
     <figure class="figure-square">
-        <a href="lover4.jpeg" target="imageTab"><img src="lover4.jpeg" alt="Lover 4"></a>
+        <a href="images/gallery/lover4.jpeg" target="imageTab"><img src="lover4.jpeg" alt="Lover 4"></a>
         <figcaption>cinema date</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="lover5.jpeg" target="imageTab"><img src="lover5.jpeg" alt="Lover 5"></a>
+        <a href="images/gallery/lover5.jpeg" target="imageTab"><img src="lover5.jpeg" alt="Lover 5"></a>
         <figcaption>photobooth date</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="lover6.jpeg" target="imageTab"><img src="lover6.jpeg" alt="Lover 6"></a>
+        <a href="images/gallery/lover6.jpeg" target="imageTab"><img src="lover6.jpeg" alt="Lover 6"></a>
         <figcaption>cafe date</figcaption>
     </figure>
 </div>
@@ -393,3 +393,4 @@ footer {
 
 </body>
 </html>
+
