--- a/myfilmtv.html
+++ b/myfilmtv.html
@@ -217,13 +217,13 @@ footer p {
             <p class="creator">Created by Christopher Lloyd & Steven Levitan</p>
         </div>
         <div class="trailer-container">
-            <iframe src="https://www.youtube.com/watch?v=rbpTUPisA78" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/rbpTUPisA78" allowfullscreen></iframe>
         </div>
     </div>
 
     <div class="split-container reverse">
         <div class="trailer-container">
-            <iframe src="https://www.youtube.com/watch?v=oZn3qSgmLqI" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/oZn3qSgmLqI" allowfullscreen></iframe>
         </div>
         <div class="desc-card">
             <div>
@@ -245,13 +245,13 @@ footer p {
             <p class="creator">Created by Ins Choi & Kevin White</p>
         </div>
         <div class="trailer-container">
-            <iframe src="https://www.youtube.com/watch?v=HIBbB6giJ7c" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/HIBbB6giJ7c" allowfullscreen></iframe>
         </div>
     </div>
 
     <div class="split-container reverse">
         <div class="trailer-container">
-            <iframe src="https://www.youtube.com/watch?v=8yyzNQfaQR8" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/8yyzNQfaQR8" allowfullscreen></iframe>
         </div>
         <div class="desc-card">
             <div>
@@ -273,13 +273,13 @@ footer p {
             <p class="creator">Created by Jason Rothenberg</p>
         </div>
         <div class="trailer-container">
-            <iframe src="https://www.youtube.com/watch?v=aDrsItJ_HU4" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/aDrsItJ_HU4" allowfullscreen></iframe>
         </div>
     </div>
 
     <div class="split-container reverse">
         <div class="trailer-container">
-            <iframe src="https://www.youtube.com/watch?v=BwYBw1raC2o" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/BwYBw1raC2o" allowfullscreen></iframe>
         </div>
         <div class="desc-card">
             <div>
