--- a/mybeats.html
+++ b/mybeats.html
@@ -187,8 +187,9 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="gallery.html">Gallery</a>
-            <a href="movies.html">Movies</a>
-            <a href="tvshows.html">TV Shows</a>
+            <a href="mybeats.html">Beats</a>
+            <a href="myfilm.html">Movies</a>
+            <a href="myfilmtv.html">TV Shows</a>
         </nav>
     </header>
 
@@ -256,5 +257,4 @@
     </footer>
 </body>
 </html>
-
 
