--- a/aboutme.html
+++ b/aboutme.html
@@ -227,7 +227,7 @@
     <div class="section-title">Childhood Years</div>
     <div class="divider"></div>
     <div class="content-with-photos">
-      <img src="pic1.jpeg" alt="Childhood Photo 1" class="img-left" style="width:330px; height:220px;">
+      <img src="images/bio/pic1.jpeg" alt="Childhood Photo 1" class="img-left" style="width:330px; height:220px;">
       <p>
         If you had told me at 13 where I would be today, I might have found it hard to believe.<sup>1</sup>
         Growing up, life was often confusing and didn't look like the usual story I imagined.<sup>2</sup>
@@ -239,7 +239,7 @@
         My grandmother taught me early how to be independent, which wasn't always easy because sometimes I felt like I had no one to fully rely on.<sup>8</sup>
         But that independence became a strong part of me.<sup>9</sup>
       </p>
-      <img src="pic2.jpeg" alt="Childhood Photo 2" class="img-right" style="width:220px; height:220px;">
+      <img src="images/bio/pic2.jpeg" alt="Childhood Photo 2" class="img-right" style="width:220px; height:220px;">
       <p>
         Over time, I started to understand why my life had been like this, and even though it wasn't simple, it taught me important lessons about staying strong.<sup>10</sup>
         I learned that staying positive, even when things look different or hard, really helps.<sup>11</sup>
@@ -257,7 +257,7 @@
     <div class="section-title">Teenage Years</div>
     <div class="divider"></div>
     <div class="content-with-photos">
-      <img src="teen1.jpg" alt="Teenage Photo 1" class="img-right" style="width:45%; height:250px;">
+      <img src="images/bio/teen1.jpg" alt="Teenage Photo 1" class="img-right" style="width:45%; height:250px;">
       <p>
         My teenage years were a mix of trying to figure out who I really wanted to be and dealing with the challenges of growing up.<sup>1</sup>
         Looking back, there are moments that make me cringe, times when I felt awkward like many teenagers do.<sup>2</sup>
@@ -272,7 +272,7 @@
         Without all the usual distractions of school and friends, I had space to think deeply about my choices and how to be better.<sup>9</sup>
         I started learning new things from inside myself, thinking about how I could improve.<sup>10</sup>
       </p>
-      <img src="teen2.jpg" alt="Teenage Photo 2" class="img-left" style="width:40%; height:200px;">
+      <img src="images/bio/teen2.jpg" alt="Teenage Photo 2" class="img-left" style="width:40%; height:200px;">
       <p>
         That still, quiet time became a big turning point for me.<sup>11</sup>
         It helped me become stronger and more confident.<sup>12</sup>
@@ -292,7 +292,7 @@
     <div class="section-title">College Years</div>
     <div class="divider"></div>
     <div class="content-with-photos">
-      <img src="college 1.jpeg" alt="College Photo 1" class="img-left" style="width:40%; height:200px;">
+      <img src="images/bio/college1.jpeg" alt="College Photo 1" class="img-left" style="width:40%; height:200px;">
       <p>
         College has been an exciting and important part of my life so far.<sup>1</sup>
         It's a time when I keep growing while staying connected to who I was as a teenager.<sup>2</sup>
@@ -307,7 +307,7 @@
         What started as a quiet time of thinking during the pandemic has grown into a constant process of learning and growing.<sup>9</sup>
         I'm filled with hope and strength, and I believe that no matter where life takes me, I have what I need to face it with confidence and kindness.<sup>10</sup>
       </p>
-      <img src="college2.jpeg" alt="College Photo 2" class="img-right" style="width:45%; height:250px;">
+      <img src="images/bio/college2.jpeg" alt="College Photo 2" class="img-right" style="width:45%; height:250px;">
       <p>
         College is about more than just school; it's about learning life lessons and building my future.<sup>11</sup>
         I'm thankful for the chance to follow my interests and challenge myself.<sup>12</sup>
@@ -334,4 +334,5 @@
 
 </body>
 </html>
+
 
